--- a/sass/app.scss
+++ b/sass/app.scss
@@ -5,7 +5,7 @@
 // Comment out this import if you are customizing you imports below
 @import "foundation";
 
-
+@import "base";
 @import "layout";
 @import "modules";
 @import "states";
